trying to fix the spacing issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,7 +91,7 @@
 
 .photoboxes{
   height:400px;
-  width:500px;
+  width:100%;
   background-size:cover ;
   background-position:top;
 }
